[project]
name = "marimo-getting-started"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
classifiers = ["Private :: Do Not Upload"]
authors = [{ name = "Дамјан Георгиевски", email = "gdamjan@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.18.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.10",
]

